[package]
name = "ccc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.11"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"