[package]
name = "ccc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.12"
tonic = "0.11"
getopts = "0.2"
colored = "2"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
prost-serde="0.3.0"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
