[package]
name = "reflection-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tonic-reflection = "0.11"
tokio-stream = "0.1.15"
futures-util = "0.3"
prost-types = "0.12.3"

[build-dependencies]
tonic-build = "0.11"